[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Altar.gd" type="Script" id=1]
[ext_resource path="res://sprites/altar_floor.png" type="Texture" id=2]
[ext_resource path="res://sprites/altar_floor_blood.png" type="Texture" id=3]
[ext_resource path="res://sprites/skull_spr_0.png" type="Texture" id=4]
[ext_resource path="res://sprites/player_shadow.png" type="Texture" id=5]
[ext_resource path="res://fonts/prstartk.ttf" type="DynamicFontData" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "blood",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "gem",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48, 13 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 6 )

[node name="Altar" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 0, 16.25 )
scale = Vector2( 3.5, 1.9 )
texture = ExtResource( 5 )

[node name="skull_spr" type="Sprite" parent="."]
position = Vector2( -32, -32 )
rotation = -0.640536
texture = ExtResource( 4 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "blood"

[node name="sprite2" type="AnimatedSprite" parent="."]
position = Vector2( 32, 0 )
frames = SubResource( 1 )
animation = "blood"

[node name="sprite3" type="AnimatedSprite" parent="."]
position = Vector2( -32, 0 )
frames = SubResource( 1 )
animation = "blood"

[node name="collider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="collider" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 27 )
shape = SubResource( 3 )

[node name="label" type="Label" parent="."]
margin_left = -32.0
margin_top = -72.0
margin_right = 32.0
margin_bottom = -58.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
